Fix spacing so it is not too spead apart and font size for app name

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -17,6 +17,12 @@ nav {
   box-shadow: 0 2px partial.$color-shadow;
 }
 
+.navbar-brand {
+  font-size:  1.15em;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 .navbar-pages, .login {
   align-items: center;
 }
@@ -25,6 +31,14 @@ nav {
   a {
     color: black;
     text-decoration: none;
+  }
+}
+
+.user {
+  margin-bottom: 0.2em;
+
+  p {
+    margin-bottom: 0.2em;
   }
 }
 
